# EvidenceCodec---Context-Compression-Algorithm

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  modal.yaml
configs/experiments/: modernbert_base_sanity.yaml  modernbert_large.yaml  modernbert_large_smoke.yaml
docs/: PROJECT_STRUCTURE.md
modal_apps/: __init__.py  build_candidates.py  build_candidates_sbert.py  build_chunks.py  build_selections.py  common.py  compress_smoke.py  distill_student.py  evaluate.py  full_hotpotqa_training_run.py  ingest.py  inspect_data.py  prepare_data.py  reranker_smoke.py  serve.py  train_reranker.py  train_reranker_smoke.py
reports/final/: evidencecodec_final_report.tex
reports/final/assets/: metrics_by_checkpoint.csv  metrics_by_checkpoint.jsonl  train_metrics.jsonl  training_summary.json
scripts/: README.md
src/evidence_codec/: __init__.py
src/evidence_codec/chunking/: __init__.py  chunker.py  dataset_chunkers.py  units.py
src/evidence_codec/core/: __init__.py  config.py  types.py
src/evidence_codec/evaluation/: __init__.py  metrics.py  offline.py
src/evidence_codec/modal_jobs/: __init__.py  build_candidates.py  build_chunks.py  build_selections.py  distill_student.py  evaluate.py  ingest.py  inspect_data.py  prepare_data.py  serve.py  train_reranker.py
src/evidence_codec/pipeline/: __init__.py  compress.py
tests/: test_dataset_chunkers.py  test_full_run_planning.py  test_pipeline_compress.py  test_reranker_encoding.py  test_reranker_pairs.py  test_reranker_training.py  test_selection.py  test_stage1_retrieval.py  test_structure_smoke.py
(+22 files in other folders)
