[project]
name = "evidence-codec"
version = "0.1.0"
description = "Raw-text evidence reranking context compressor."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "modal>=1.5.0",
  "datasets<4",
  "numpy",
  "pandas",
  "pyyaml",
  "rank-bm25",
  "scikit-learn",
  "tiktoken",
]

[project.optional-dependencies]
train = [
  "accelerate",
  "evaluate",
  "sentence-transformers",
  "torch<3",
  "transformers",
]
student = [
  "lightgbm",
]
serve = [
  "fastapi",
  "pydantic",
  "uvicorn",
]
dev = [
  "pytest",
  "ruff",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
